# assignments-3-and-later-thebrave

./: .gitignore  CMakeLists.txt  install-deps.sh
.devcontainer/: devcontainer.json
.github/workflows/: github-actions.yml
aesd-char-driver/: aesd-circular-buffer.c
examples/systemcalls/: systemcalls.c
examples/threading/: threading.c  threading.h
finder-app/: CMakeLists.txt  Makefile  finder-test.sh  finder.sh  manual-linux.sh  writer.c  writer.sh
server/: CMakeLists.txt  Makefile  aesdsocket-start-stop  aesdsocket.c  thr_cnx.c  thr_cnx.h  thr_cst.h  thr_tim.c  thr_tim.h  util.c  util.h
